<resources>
    <string name="app_name">UGH!</string>

    <string name="play">PLAY!</string>
    <string name="settings">SETTINGS</string>

    <string name="total_boxes">X/X</string>
    <string name="next_station">Del/Pick: X</string>
    <string name="next_deliver_station_label">Deliver:</string>
    <string name="next_pickup_station_label">Pick up:</string>
    <string name="level_time">Time: XX:XX</string>
    <string name="level_time_label">Time:</string>

    <string name="level_select">Level Select</string>

    <string name="victory">Victory!</string>
    <string name="defeat">Defeat!</string>
    <string name="levels">Levels</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="restart">Restart</string>
    <string name="settings_init_cap">Settings</string>
    <string name="player_name">Player name:</string>
    <string name="confirm_settings">CONFIRM SETTINGS</string>

    <string name="position_leaderboard">Pos.</string>
    <string name="player_name_leaderboard">Player name</string>
    <string name="time_leaderboard">Time</string>

    <string name="your_time">Your completion time:</string>
    <string name="your_position">Your position:</string>
</resources>
